--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <main>
     <section id="about" class="animate-on-scroll">
       <div class="about-content">
-        <img src="https://files.catbox.moe/zftdkf.jpg" alt="Profile Picture" class="profile-pic">
+        <img src="https://files.catbox.moe/igpy2m.jpg" alt="Profile Picture" class="profile-pic">
         <h2>Change Your Playing Style Using The Best Settings
 The best solution to improve survivor gameplay performance by using premium tools from our product.</p>
       </div>
@@ -148,7 +148,7 @@ The best solution to improve survivor gameplay performance by using premium tool
 <div class="tim-grid">
 <div class="tim-item">
 <div class="bg-white dark:g-gray-200 p-6 rounded-lg shadow-lg text-center">
-<img src="https://drive.google.com/file/d/1o2MCeSkCXW4vuoP0bnaO5tL0Rf1Zsboq/view?usp=drivesdk" alt="Profile Picture" class="profile-own">
+<img src="https://files.catbox.moe/0njfeo.jpg" alt="Profile Picture" class="profile-own">
 <h3 class="text-xl font-bold mb-2">
 RipZ888 - Xiterz
 </h3>
