--- a/index.html
+++ b/index.html
@@ -99,27 +99,7 @@ The best solution to improve survivor gameplay performance by using premium tool
       <div class="project-grid">
     <div class="project-item">
         <h3>BENEFITS</h3>
-        <p>The files easydrag system modifies the game data system to optimize aiming performance. It includes features such as:</p>
-        <ul>
-            <li>EASYDRAG</li>
-            <li>EASYDRAG SCOPE</li>
-            <li>AIMEASY HEAD</li>
-            <li>AIM ASSIST</li>
-            <li>AIM SENSITIVITY</li>
-            <li>FAST DRAG</li>
-            <li>AIM OPTIMIZATION</li>
-            <li>AIM ADJUSTMENT</li>
-        </ul>
-        <p>No gimmicks, 100% real modification.</p>
-        <p>Safe and secure:</p>
-        <ul>
-            <li>NO BL</li>
-            <li>NO SC</li>
-            <li>NO BYPASS</li>
-            <li>NO TRICK</li>
-            <li>NO VPN</li>
-        </ul>
-        <p>FREE UPDATE</p>
+        <p>The advantage of buying our files is that you can feel the superiority over others because these files modify game data and are 100% working./p>
     </div>
 </div>
       </div>
