--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ The best solution to improve survivor gameplay performance by using premium tool
       <div class="project-grid">
     <div class="project-item">
         <h3>BENEFITS</h3>
-        <p>The advantage of buying our files is that you can feel the superiority over others because these files modify game data and are 100% working./p>
+        <p>The advantage of buying our files is that you can feel the superiority over others because these files modify game data and are 100% working.</p>
     </div>
 </div>
       </div>
