--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <main>
     <section id="about" class="animate-on-scroll">
       <div class="about-content">
-        <img src="https://files.catbox.moe/igpy2m.jpg" alt="Profile Picture" class="profile-pic">
+        <img src="https://files.catbox.moe/hqixtk.jpg" alt="Profile Picture" class="profile-pic">
         <h2>Change Your Playing Style Using The Best Settings
 The best solution to improve survivor gameplay performance by using premium tools from our product.</p>
       </div>
