--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ Founder & Ceo & Developer
   </main>
 
   <footer>
-    <p>&copy; 2024 - 2025 AMBALOCK. All Rights Reserved.</p>
+    <p>&copy; 2024 - 2025 BESTH4X. All Rights Reserved.</p>
   </footer>
 
   <script>
